# test_openXR

./: CMakeLists.txt  README.md
CMakeModules/: FindOpenXR.cmake
src/: CMakeLists.txt  glsystem.cpp  glsystem.h  main.cpp  xrapp.cpp  xrapp.h
